--- a/Kalkulator22_2/Kalkulator22_2.Android/Properties/AndroidManifest.xml
+++ b/Kalkulator22_2/Kalkulator22_2.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.1.221113" package="com.companyname.kalkulator22_2" android:installLocation="auto" android:versionCode="221026">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
+		  android:versionName="1.1" 
+		  package="PioChoBia.calc" android:installLocation="preferExternal" android:versionCode="221119">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
-	<application android:label="calc" android:theme="@style/MainTheme"></application>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<application android:label="calc" android:theme="@style/MainTheme" android:icon="@mipmap/pikto"></application>
 </manifest>
